# xiloader

./: CMakeLists.txt
.github/workflows/: release.yml
cmake/: argparse.cmake
src/: console.cpp  console.h  functions.cpp  functions.h  main.cpp  network.cpp  network.h  xiloader.rc.in
